crates/agent/src/publications/snapshots/agent__publications__specs__test__quota_enforcement-2.snap
---
source: crates/agent/src/publications/specs.rs
assertion_line: 727
expression: "serde_json::json!({\n        \"draft_id\" : & row_draft_id, \"status\" : & status, \"errors\" : &\n        formatted_errors\n    })"
---
{
  "draft_id": "1120000000000000",
  "errors": [
    "Request to add 1 task(s) would exceed tenant 'usageB/' quota of 2. 2 are currently in use.",
    "Request to add 1 collections(s) would exceed tenant 'usageB/' quota of 2. 2 are currently in use."
  ],
  "status": {
    "type": "buildFailed"
  }
}
