crates/agent/src/publications/snapshots/agent__publications__specs__test__quota_enforcement_single_tenant-2.snap
---
source: crates/agent/src/publications/specs.rs
assertion_line: 687
expression: errors
---
[
    Record {
        scope: "",
        detail: "Tenant usageB/ would exceed task quota of 2 by 1",
    },
]
