crates/agent/src/publications/snapshots/agent__publications__specs__test__quota_enforcement_single_tenant.snap
---
source: crates/agent/src/publications/specs.rs
assertion_line: 668
expression: res
---
Ok(
    (
        1111100000000000,
        BuildFailed,
    ),
)
